--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,5 @@
 project('hex-to-image', 'cpp', default_options: ['cpp_std=c++17'], license: 'MIT')
+add_project_link_arguments(['-lstdc++fs'], language : 'cpp')
 
 subdir('src')
 
