--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,17 +13,18 @@ on:
 jobs:
 
   linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
       with:
         python-version: '3.x'
     - run: pip install meson ninja
-    - run: meson setup builddir/
+    - run: meson setup build/
       env:
         CC: gcc
-    - run: meson test -C builddir/ -v
+    - run: meson compile -C build/ -v
+    - run: meson test -C build/ -v
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
@@ -39,10 +40,11 @@ jobs:
         python-version: '3.x'
     - run: brew install gcc
     - run: pip install meson ninja
-    - run: meson setup builddir/
+    - run: meson setup build/
       env:
         CC: gcc
-    - run: meson test -C builddir/ -v
+    - run: meson compile -C build/ -v
+    - run: meson test -C build/ -v
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
@@ -57,10 +59,11 @@ jobs:
       with:
         python-version: '3.x'
     - run: pip install meson ninja
-    - run: meson setup builddir/
+    - run: meson setup build/
       env:
         CC: gcc
-    - run: meson test -C builddir/ -v
+    - run: meson compile -C build/ -v
+    - run: meson test -C build/ -v
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
