--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,31 +1,40 @@
-name: ci_meson
+name: meson test
 
 on:
   push:
     paths:
       - "**.c"
       - "**.h"
+      - ".github/workflows/test.yml"
   pull_request:
     paths:
       - "**.h"
       - "**.h"
+      - ".github/workflows/test.yml"
 
 jobs:
 
   linux:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-python@v1
+    - name: Checkout repo
+      uses: actions/checkout@v1
+    - name: Setup Python
+      uses: actions/setup-python@v1
       with:
         python-version: '3.x'
-    - run: pip install meson ninja
-    - run: meson setup build/
+    - name: Install meson and ninja
+      run: pip install meson ninja
+    - name: setup meson build
+      run: meson setup build/
       env:
         CC: gcc
-    - run: meson compile -C build/ -v
-    - run: meson test -C build/ -v
-    - uses: actions/upload-artifact@v1
+    - name: Meson compile
+      run: meson compile -C build/ -v
+    - name: Meson test
+      run: meson test -C build/ -v
+    - name: Upload Log
+      uses: actions/upload-artifact@v1
       if: failure()
       with:
         name: Linux_Meson_Testlog
@@ -34,18 +43,25 @@ jobs:
   macos:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-python@v1
+    - name: Checkout repo
+      uses: actions/checkout@v1
+    - name: Setup Python
+      uses: actions/setup-python@v1
       with:
         python-version: '3.x'
-    - run: brew install gcc
-    - run: pip install meson ninja
+    - name: Install gcc
+      run: brew install gcc
+    - name: Install meson and ninja
+      run: pip install meson ninja
     - run: meson setup build/
       env:
         CC: gcc
-    - run: meson compile -C build/ -v
-    - run: meson test -C build/ -v
-    - uses: actions/upload-artifact@v1
+    - name: Meson compile
+      run: meson compile -C build/ -v
+    - name: Meson test
+      run: meson test -C build/ -v
+    - name: Upload Log
+      uses: actions/upload-artifact@v1
       if: failure()
       with:
         name: MacOS_Meson_Testlog
@@ -54,17 +70,23 @@ jobs:
   windows:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-python@v1
+    - name: Checkout repo
+      uses: actions/checkout@v1
+    - name: Setup Python
+      uses: actions/setup-python@v1
       with:
         python-version: '3.x'
-    - run: pip install meson ninja
+    - name: Install meson and ninja
+      run: pip install meson ninja
     - run: meson setup build/
       env:
         CC: gcc
-    - run: meson compile -C build/ -v
-    - run: meson test -C build/ -v
-    - uses: actions/upload-artifact@v1
+    - name: Meson compile
+      run: meson compile -C build/ -v
+    - name: Meson test
+      run: meson test -C build/ -v
+    - name: Upload Log
+      uses: actions/upload-artifact@v1
       if: failure()
       with:
         name: Windows_Meson_Testlog
