--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Generate Changelog
       id: changelog
       run: |
-        changelog=$(git log ${{ steps.tag_inc.outputs.previous_tag }}..HEAD --no-merges --format="%h %s%+b")
+        changelog=$(git log ${{ steps.inc_tag.outputs.previous_tag }}..HEAD --no-merges --format="%h %s%+b")
         changelog="${changelog//'%'/'%25'}"
         changelog="${changelog//$'\n'/'%0A'}"
         changelog="${changelog//$'\r'/'%0D'}"
