Try changing the windows build to clang

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -139,7 +139,7 @@ jobs:
 
     - run: meson setup builddir/
       env:
-        CC: gcc
+        CC: clang
 
     - name: Meson compile
       run: meson compile -C builddir/ -v
