Maybe clean path first

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,6 +134,9 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v1
 
+    - name: Clean up PATH
+      uses: egor-tensin/cleanup-path@v1
+
     - name: Set up MinGW
       uses: egor-tensin/setup-mingw@v2
 
