Use gcc as clang doesn't seem to exist

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,11 +69,13 @@ jobs:
       run: meson setup builddir/
       env:
         CC: gcc
+        CXX: gcc
 
     - name: Meson compile
       run: meson compile -C builddir/ -v
       env:
         CC: gcc
+        CXX: gcc
 
     - name: Release add build
       id: release_build
@@ -109,11 +111,13 @@ jobs:
       run: meson setup builddir/
       env:
         CC: gcc
+        CXX: gcc
 
     - name: Meson compile
       run: meson compile -C builddir/ -v
       env:
         CC: gcc
+        CXX: gcc
 
     - name: Release add build
       id: release_build
@@ -145,14 +149,14 @@ jobs:
     - name: Meson setup
       run: meson setup builddir/
       env:
-        CC: clang
-        CXX: clang
+        CC: gcc
+        CXX: gcc
 
     - name: Meson compile
       run: meson compile -C builddir/ -v
       env:
-        CC: clang
-        CXX: clang
+        CC: gcc
+        CXX: gcc
 
     - name: Release add build
       id: release_build
