Force meson to actually use static linking

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,1 +1,1 @@
-executable('hex-to-image', ['hex-to-image.cpp', 'stb_image_write.h'], cpp_args: ['-static', '-static-libgcc', '-static-libstdc++'])
+executable('hex-to-image', ['hex-to-image.cpp', 'stb_image_write.h'], cpp_args : ['-static', '-static-libgcc', '-static-libstdc++'], link_args: ['-static', '-static-libgcc', '-static-libstdc++'])
