Disable static linking on macos

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,7 +107,7 @@ jobs:
       run: pip install meson ninja
 
     - name: Meson setup
-      run: meson setup builddir/
+      run: meson setup builddir/ -Ddynamic=true
       env:
         CC: gcc
 
