--- a/src/meson.build
+++ b/src/meson.build
@@ -1,1 +1,5 @@
-executable('hex-to-image', ['hex-to-image.cpp', 'stb_image_write.h'], cpp_args : ['-static', '-static-libgcc', '-static-libstdc++'], link_args: ['-static', '-static-libgcc', '-static-libstdc++'])
+if get_option('dynamic')
+  executable('hex-to-image', ['hex-to-image.cpp', 'stb_image_write.h'])
+else
+  executable('hex-to-image', ['hex-to-image.cpp', 'stb_image_write.h'], cpp_args : ['-static', '-static-libgcc', '-static-libstdc++'], link_args: ['-static', '-static-libgcc', '-static-libstdc++'])
+endif
