--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,7 +96,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install pip
-      run: sudo apt-get install python3-pip
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python3-pip
 
     - name: Install meson and ninja
       run: pip install meson ninja
