--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,7 +101,7 @@ jobs:
         sudo apt-get install -y python3-pip
 
     - name: Install meson and ninja
-      run: pip install meson ninja
+      run: pip3 install meson ninja
 
     - name: Meson setup
       run: meson setup builddir/
