Add pip3 install dir to PATH

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,6 +99,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y python3-pip cmake
+        export PATH=$PATH:/home/runner/.local/bin
 
     - name: Install meson and ninja
       run: |
