fix meson_options desc

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,1 +1,1 @@
-option('dynamic', type : 'boolean', value : false, description : 'Disable static linking')
+option('dynamic', type : 'boolean', value : false, description : 'Disable dynamic linking')
