Add pip install folder back to PATH

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,6 +147,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y cmake
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
 
     - name: Install meson and ninja
       run: |
