--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
         fetch-depth: 0
 
     - name: Setup Python
+      if: ${{ matrix.name != 'linux-arm64' }}
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
