--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,19 +21,19 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            name: linux
+            os-name: linux
             pip-path: ~/.cache/pip
           - os: windows-latest
-            name: windows
+            os-name: windows
             pip-path: ~\AppData\Local\pip\Cache
           - os: macos-latest
-            name: macos
+            os-name: macos
             pip-path: ~/Library/Caches/pip
           - os: ARM64 # self-hosted linux ARM64 runners
-            name: linux-arm64
+            os-name: linux-arm64
             pip-path: ~/.cache/pip
 
-    name: Build and test on ${{ matrix.name }}
+    name: Build and test on ${{ matrix.os-name }}
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -43,7 +43,7 @@ jobs:
         fetch-depth: 0
 
     - name: Setup Python
-      if: ${{ matrix.name != 'linux-arm64' }}
+      if: ${{ matrix.os-name != 'linux-arm64' }}
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
@@ -53,16 +53,16 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ${{ matrix.pip-path }}
-        key: ${{ matrix.name }}-pip
+        key: ${{ matrix.os-name }}-pip
 
     - name: Install gcc(macos)
       id: gcc_install
-      if: ${{ matrix.name == 'macos' }}
+      if: ${{ matrix.os-name == 'macos' }}
       run: brew install gcc
   
     - name: Install cmake(linux-arm64)
       id: cmake_install
-      if: ${{ matrix.name == 'linux-arm64' }}
+      if: ${{ matrix.os-name == 'linux-arm64' }}
       run: |
         sudo apt-get update
         sudo apt-get install -y cmake
@@ -71,16 +71,16 @@ jobs:
       id: meson_install
       run: pip install scikit-build ninja meson
 
-    - name: Meson setup(${{ matrix.name }})
+    - name: Meson setup(${{ matrix.os-name }})
       id: meson_setup
-      if: ${{ matrix.name != 'macos' }}
+      if: ${{ matrix.os-name != 'macos' }}
       run: meson setup builddir/
       env:
         CC: gcc
 
     - name: Meson setup(macos)
       id: meson_macos_setup
-      if: ${{ matrix.name == 'macos' }}
+      if: ${{ matrix.os-name == 'macos' }}
       run: meson setup builddir/ -Ddynamic=true
       env:
         CC: gcc
@@ -92,8 +92,8 @@ jobs:
       run: meson test -C builddir/ -v
 
     - name: Upload Log
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v2
       if: failure()
       with:
-        name: ${{ matrix.name }}_meson_testlog
+        name: ${{ matrix.os-name }}_meson_testlog
         path: build/meson-logs/testlog.txt
