--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,17 @@
+# Tests whether the source code can be built with meson compile.
+# This would also be the workflow that runs unit tests, if I had written any.
+# All tests are run on windows, ubuntu, macos, and linux-arm64.
 name: meson test
 
 on:
   push:
+    paths:
+      - "**.c"
+      - "**.cpp"
+      - "**.h"
+      - ".github/workflows/test.yml"
+      - "**meson.build"
+      - "meson_options.txt"
   pull_request:
     paths:
       - "**.c"
@@ -17,15 +27,22 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-20.04
-            name: linux
+          - os: ubuntu-latest
+            os-name: linux
+            pip-path: ~/.cache/pip
           - os: windows-latest
-            name: windows
+            os-name: windows
+            pip-path: ~\AppData\Local\pip\Cache
           - os: macos-latest
-            name: macos
+            os-name: macos
+            pip-path: ~/Library/Caches/pip
+          - os: ARM64 # self-hosted linux ARM64 runners
+            os-name: linux-arm64
+            pip-path: ~/.cache/pip
 
-    name: Build and test on ${{ matrix.name }}
+    name: Build and test on ${{ matrix.os-name }}
     runs-on: ${{ matrix.os }}
+
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
@@ -33,28 +50,44 @@ jobs:
         fetch-depth: 0
 
     - name: Setup Python
+      if: ${{ matrix.os-name != 'linux-arm64' }}
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
 
-    - name: Install gcc
+    - name: Cache pip packages
+      id: pip_cache
+      uses: actions/cache@v2
+      with:
+        path: ${{ matrix.pip-path }}
+        key: ${{ matrix.os-name }}-pip
+
+    - name: Install gcc(macos)
       id: gcc_install
-      if: ${{ matrix.os == 'macos-latest' }}
+      if: ${{ matrix.os-name == 'macos' }}
       run: brew install gcc
+  
+    - name: Install cmake(linux-arm64)
+      id: cmake_install
+      if: ${{ matrix.os-name == 'linux-arm64' }}
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y cmake
 
     - name: Install meson and ninja
-      run: pip install meson ninja
+      id: meson_install
+      run: pip install scikit-build ninja meson
 
-    - name: Meson setup(${{ matrix.name }})
+    - name: Meson setup(${{ matrix.os-name }})
       id: meson_setup
-      if: ${{ matrix.os != 'macos-latest' }}
+      if: ${{ matrix.os-name != 'macos' }}
       run: meson setup builddir/
       env:
         CC: gcc
 
-    - name: Meson setup(${{ matrix.name }})
+    - name: Meson setup(macos)
       id: meson_macos_setup
-      if: ${{ matrix.os == 'macos-latest' }}
+      if: ${{ matrix.os-name == 'macos' }}
       run: meson setup builddir/ -Ddynamic=true
       env:
         CC: gcc
@@ -66,8 +99,8 @@ jobs:
       run: meson test -C builddir/ -v
 
     - name: Upload Log
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v2
       if: failure()
       with:
-        name: ${{ matrix.name }}_meson_testlog
+        name: ${{ matrix.os-name }}_meson_testlog
         path: build/meson-logs/testlog.txt
